# medviz

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  compose.yaml
.github/workflows/: ci.yml
data/: README.md  pyproject.toml
data/app/: main.py
docs/: CI_ID.md
front/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
front/assets/: style.css
segmentation/: evaluation.py  main.py  maxtree.py  predict.py  run_training.py  run_training_v2.py  segmentation.py  training.py  visualize_pred.py
test_suite/: test_api.py  test_evaluation.py  test_maxtree.py  test_predicct.py
traitement/: .dockerignore  Dockerfile  README.md  pyproject.toml
traitement/app/: database.py  main.py
traitement/segmentation/: evaluation.py  maxtree.py  predict.py  preprocessing.py  run_training.py  segmentation.py  training.py
